[package]
name = "rust-wasm-centrality"
version = "0.1.0"
authors = ["Simon Crowe <simon.r.crowe@pm.me>"]
description = "Display a network graph and cenrality-ranked table of nodes"
license = "MIT"
repository = "https://github.com/simoncrowe/rust-wasm-centrality"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"

[dependencies]
array2d = "0.3.0"
byteorder = "1.4.3"
console_error_panic_hook = "0.1.7"
console_log ="0.2"
js-sys = "0.3.60"
log = "0.4"
rustc-hash = "1.1.0"
wasm-bindgen = "0.2.63"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "console",
  "Performance",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Response",
  "Window",
]
